--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 		<!-- Page Title: find this on the page tab -->
 		<title>
-		Bootstrap Vue2 App
+		twopotathoes
 		</title>
 
 		<meta charset="utf-8">
